--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.3-alpha.2",
     "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.15",
+    "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "validator": "^10.11.0"
